<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white_background"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    tools:context="com.example.theloanranger.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1_label"
        android:textStyle="bold"
        android:textColor="@color/emerald_green"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/amount_label" />

        <EditText
            android:id="@+id/amount_to_pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/interest_label" />

        <EditText
            android:id="@+id/amount_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/interest_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step2_label"
        android:textStyle="bold"
        android:textColor="@color/emerald_green"
        android:textSize="40sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/choose_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By Date" />
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:orientation="horizontal" >
	        
	         <Spinner
	             android:id="@+id/month_spinner"
	             android:layout_width="75dp"
	             android:layout_height="29dp"
	             android:background="@android:drawable/btn_dropdown"
	             android:spinnerMode="dropdown"
	             android:textSize="5sp" />

	         <Spinner
	             android:id="@+id/year_spinner"
	             android:layout_width="95dp"
	             android:layout_height="29dp"
	             android:background="@android:drawable/btn_dropdown"
	             android:spinnerMode="dropdown"
	             android:textSize="5sp" />

	        
	    
    	</LinearLayout>
         
        <RadioButton
            android:id="@+id/choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By Monthly Payment" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>
    
    
    <Button
    android:id="@+id/calculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:text="@string/calculate_button_label"
    />

</LinearLayout>